<resources>
    <string name="app_name">Catalogue Movie 3.0</string>
    <string name="movie_title">Movie Title</string>
    <string name="overview">OVERVIEW</string>
    <string name="rating">RATING</string>
    <string name="fetching_movies">Fetching Movies…</string>
    <string name="movie_details">Movie Details</string>
    <string name="release_date">RELEASE DATE</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aw_snap">Aw Snap! Something went wrong</string>
    <string name="search_hint">Enter a movie title here</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="upcoming">UPCOMING</string>
    <string name="movie_refreshed">Movie Refreshed</string>
    <string name="favorite">FAVORITE</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="time">TIME</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="empty_text">EMPTY</string>
    <string name="add_widget">Add widget</string>
    <string name="error_load_failed">Error! Load Failed!</string>
    <string name="notification">Notification</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="switch_daily_reminder">Switch Daily Reminder</string>
    <string name="upcoming_reminder">Upcoming Reminder</string>
    <string name="switch_upcoming_reminder">Switch Upcoming Reminder</string>
    <string name="language_setting">Language Setting</string>
    <string name="change_language">Change Language</string>
    <string name="message_upcoming_reminder_canceled">Upcoming Reminder Canceled</string>
    <string name="message_upcoming_reminder">Upcoming Reminder Activated</string>
    <string name="message_daily_reminder">Let\'s get back to the Catalogue Movie</string>
</resources>
