<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".SettingActivity">

        <TextView
            android:id="@+id/tvNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/notification"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/daily_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNotification"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_reminder"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/switch_daily_reminder" />
            </LinearLayout>

            <Switch
                android:id="@+id/switch_daily"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center" />
        </LinearLayout>

        <View
            android:id="@+id/daily"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/daily_reminder"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/upcoming_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/daily"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming_reminder"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/switch_upcoming_reminder" />

            </LinearLayout>

            <Switch
                android:id="@+id/switch_upcoming"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center" />
        </LinearLayout>

        <View
            android:id="@+id/upcoming"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/upcoming_reminder"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/upcoming"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/setting"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/language_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSetting"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_setting"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/change_language" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/language_setting"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>